# SDFGen

./: Cargo.toml  README.md  compile_readme.sh  copy_docs.sh
docs/: index.html  search-index.js  settings.html  source-files.js
docs/argparse/: all.html  index.html  struct.Collect.html  struct.DecrBy.html  struct.IncrBy.html  struct.List.html  struct.Parse.html  struct.ParseCollect.html  struct.ParseList.html  struct.ParseOption.html  struct.Print.html  struct.PushConst.html  struct.Store.html  struct.StoreConst.html  struct.StoreFalse.html  struct.StoreOption.html  struct.StoreTrue.html  trait.FromCommandLine.html
docs/bytemuck/: enum.PodCastError.html  trait.Contiguous.html  trait.TransparentWrapper.html  trait.Zeroable.html
docs/color_quant/: struct.NeuQuant.html
docs/deflate/: enum.Compression.html  enum.MatchingType.html  enum.SpecialOptions.html  struct.CompressionOptions.html
docs/gif/: enum.Block.html  enum.ColorOutput.html  enum.Decoded.html  enum.DecodingError.html  enum.DisposalMethod.html  enum.EncodingError.html  enum.Extension.html  enum.ExtensionData.html  enum.Extensions.html  enum.Repeat.html  struct.AnyExtension.html  struct.DecodeOptions.html  struct.Decoder.html  struct.DecodingFormatError.html  struct.Encoder.html  struct.Frame.html  struct.MemoryLimit.html  struct.StreamingDecoder.html
docs/image/: all.html  enum.ColorType.html  enum.DynamicImage.html  enum.ExtendedColorType.html  enum.ImageFormat.html  enum.ImageOutputFormat.html  fn.guess_format.html  fn.image_dimensions.html  fn.load.html  fn.load_from_memory.html  fn.load_from_memory_with_format.html  fn.open.html  fn.save_buffer.html  fn.save_buffer_with_format.html  index.html  struct.Bgr.html  struct.Bgra.html  struct.Delay.html  struct.Frame.html  struct.Frames.html  struct.ImageBuffer.html  struct.Luma.html  struct.LumaA.html  struct.Pixels.html  (+12 more)
performance_data/: by_hand_thread_comparison.txt
src/: lib.rs  main.rs
(+669 files in other folders)
