[package]
name = "sdfgen"
description = "SDFGen generates a (preferably) lower resolution distance field from an input image."
version = "0.6.3"
authors = ["Elias Eskelinen <elias.eskelinen@pm.me>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/jonnelafin/SDFGen"
documentation = "https://jonnelafin.github.io/SDFGen/"
repository = "https://github.com/jonnelafin/SDFGen"
exclude = [
    "performance_data/*",
    "docs/*",
    "images/*",
    "out_sdf.png",
    "**/*.sh",
]

[lib]
name = "sdfgen_lib"
path = "src/lib.rs"

[[bin]]
name = "sdfgen"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.12"
chrono = "0.4.19"
argparse = "0.2.2"
